--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ h3 {
         
          <p>I am a Senior at Bob Jones University studying Interior Architecture and Design. I work for the Art + Design department as a design studio building assistant.</p>
          <p>
-            I enjoy participating in community outreach events, and I am active in my local church: Southside Baptist Church of Gaffney, SC.  I teach Sunday School for the College &amp; Career group and I run the Sound / Video Projection System during services.  I also drive the church bus for weekend activities.
+            I enjoy sowing, playing soccer,and taking pictures. I have a passion for ministry and hope to someday help with a start up of a church. A verse I recently became my favorite is Psalm 25:4-5 "Show me your ways, LORD, teach me your paths. Guide me in your truth and teach me for you are God my savior, and my hope is in you all day long." 
          </p> 
          <p>
-            I also enjoy running / hiking as well as a good book
+            I also enjoy thrifting with my sister so we started our own thrift shop on Instagram. Apparel &amp; Accessories Thrift 
          </p>
         
         <h3>EDUCATION</h3>
