--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@ body {
     margin-top: -50px;
     line-height: 150%;
 }
-    td {
-    text-align: center;
-}
 h1 {
     letter-spacing: 2px;
     font-size: 16px;
@@ -29,7 +26,12 @@ h2 {
 h3 {
     font-size: 12px;
 }
-
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 </style>
 </head>    
 <body>
