--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ h1 {
     font-size: 16px;
     text-align: center;
 }
+img{
+    text-align: center;
+}
 h2 {
     font-size: 14px;
     text-align: center;
@@ -26,12 +29,7 @@ h2 {
 h3 {
     font-size: 12px;
 }
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
+
 </style>
 </head>    
 <body>
