--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <style>
 @keyframes bgcolor {
     0% {
-        background-color: #45a3e5
+        background-color: #FFC312
     }
 
     30% {
-        background-color: #66bf39
+        background-color: #C4E538
     }
 
     60% {
-        background-color: #eb670f
+        background-color: #12CBC4
     }
 
     90% {
-        background-color: #f35
+        background-color: #FDA7DF
     }
 
     100% {
-        background-color: #864cbf
+        background-color: #ED4C67
     }
 }
 
