--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
         background-color: #FFC312
     }
 
-    30% {
+    20% {
         background-color: #C4E538
     }
 
-    60% {
+    40% {
         background-color: #12CBC4
     }
 
-    90% {
+    60% {
         background-color: #FDA7DF
     }
 
-    100% {
+    80% {
         background-color: #ED4C67
     }
 }
@@ -28,10 +28,10 @@ body {
     font-family: Verdana;
 } 
    {
-    -webkit-animation: bgcolor 20s infinite;
+    -webkit-animation: bgcolor 10s infinite;
     animation: bgcolor 10s infinite;
-    -webkit-animation-direction: alternate;
-    animation-direction: alternate;
+    -webkit-animation-direction: linear;
+    animation-direction: linear;
 } 
 #content {
     background: lightyellow;
