--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {
     animation-direction: linear;
 } 
 #content {
-    background: lightyellow;
+    background: bacrground image.jpg;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
