--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 }
 
 body {
-    background: lightgreen;
+    background: bacrground image.jpg;
     font-family: Verdana;
 } 
    {
@@ -34,7 +34,7 @@ body {
     animation-direction: linear;
 } 
 #content {
-    background: bacrground image.jpg;
+    background: lightyellow;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
