--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 }
 
 body {
-    background: bacrground image.jpg;
+ background-image: url("bacrground image.jpg");
+ background-color: #cccccc;
+}
+    {
+   
     font-family: Verdana;
 } 
    {
