--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
- background-image: url("bacrground image.jpg");
+ background-image: url("green.jpg");
  background-color: #cccccc;
 }
     {
