--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
     font-family: Verdana;
 } 
 #content {
-    background: #e6ffff;
+    background: #f5f6fa;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
