--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ h3 {
         
          <p>I am a Senior at Bob Jones University studying Interior Architecture and Design. I work for the Art + Design department as a design studio building assistant.</p>
          <p>
-            I enjoy sewing, playing soccer,and taking pictures. I have a passion for ministry and hope to someday help with a start up of a church. A verse I recently became my favorite is Psalm 25:4-5 "Show me your ways, LORD, teach me your paths. Guide me in your truth and teach me for you are God my savior, and my hope is in you all day long." 
+            I enjoy sewing, playing soccer, and taking pictures. I have a passion for ministry and hope to someday help with a start up of a church. A verse that recently became my favorite is Psalm 25:4-5 "Show me your ways, LORD, teach me your paths. Guide me in your truth and teach me for you are God my savior, and my hope is in you all day long." 
          </p> 
          <p>
-            I also enjoy thrifting with my sister so we started our own thrift shop on Instagram called <a href="https://www.instagram.com/apparel_accessories_thrift/" target="apparel_accessories_thrift">Apparel &amp; Accessories Thrift </a> 
+            I also enjoy thrifting with my sister. We started our own thrift shop on Instagram called <a href="https://www.instagram.com/apparel_accessories_thrift/" target="apparel_accessories_thrift">Apparel &amp; Accessories Thrift </a> 
          </p>
         
         <h3>EDUCATION</h3>
