--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ h3 {
             I enjoy sewing, playing soccer, and taking pictures. I have a passion for ministry and hope to someday help with a start up of a church. A verse that recently became my favorite is Psalm 25:4-5 "Show me your ways, LORD, teach me your paths. Guide me in your truth and teach me for you are God my savior, and my hope is in you all day long." 
          </p> 
          <p>
-            I also enjoy thrifting with my sister. We started our own thrift shop on Instagram called <a href="https://www.instagram.com/apparel_accessories_thrift/" target="apparel_accessories_thrift">Apparel &amp; Accessories Thrift </a> 
+            I also enjoy thrifting with my sister. We started our own thrift shop on Instagram called <a href="https://www.instagram.com/apparel_accessories_thrift/" target="apparel_accessories_thrift">Apparel &amp; Accessories Thrift. </a> 
          </p>
         
         <h3>EDUCATION</h3>
