--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading">Thrifting</h1>
-                        <p class="intro-text">Be unique, stay true to yourself, and thrift. Who doesn't like a new outfit to wear? You can find great pieces that everyone will want to know about.&nbsp;&nbsp;</p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
+                        <h1 class="brand-heading">About</h1>
+                        <p class="intro-text">We are two sister who love to thrift!</p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
                     </div>
                 </div>
             </div>
@@ -46,14 +46,7 @@
             </div>
         </div>
     </section>
-    <section id="download" class="download-section content-section text-center" style="background-image:url('assets/img/downloads-bg.jpg');"><img src="assets/img/jeans%20background.jpeg">
-        <div class="container">
-            <div class="col-lg-8 mx-auto">
-                <h1>ShOP NOW</h1>
-                <p>You can shop as long as you want, but items will be gone after they sell.&nbsp;</p><button class="btn btn-primary btn-lg btn-default" type="button">visit SHOP page</button>
-            </div>
-        </div>
-    </section>
+    <section id="download" class="download-section content-section text-center" style="background-image:url('assets/img/downloads-bg.jpg');"></section>
     <section id="contact" class="content-section text-center">
         <div class="container">
             <div class="row">
