--- a/contact.html
+++ b/contact.html
@@ -28,32 +28,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading">Thrifting</h1>
-                        <p class="intro-text">Be unique, stay true to yourself, and thrift. Who doesn't like a new outfit to wear? You can find great pieces that everyone will want to know about.&nbsp;&nbsp;</p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
+                        <h1 class="brand-heading">Contact</h1>
+                        <p class="intro-text">We are on social media!</p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-    <section id="about" class="content-section text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h2>About our Thrift Shop</h2>
-                    <p>Apparel and Accessories Thrift is an online thrift store started by two sisters. Check out what we have available right now, simply visiting&nbsp;<a href="#">the shop page</a>. Who knows you might find something to rock your style.</p>
-                    <p>The items you can find range from different high end brands to vintage clothing.&nbsp;</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="download" class="download-section content-section text-center" style="background-image:url('assets/img/downloads-bg.jpg');"><img src="assets/img/jeans%20background.jpeg">
-        <div class="container">
-            <div class="col-lg-8 mx-auto">
-                <h1>ShOP NOW</h1>
-                <p>You can shop as long as you want, but items will be gone after they sell.&nbsp;</p><button class="btn btn-primary btn-lg btn-default" type="button">visit SHOP page</button>
-            </div>
-        </div>
-    </section>
     <section id="contact" class="content-section text-center">
         <div class="container">
             <div class="row">
