--- a/shop.html
+++ b/shop.html
@@ -12,24 +12,13 @@
 </head>
 
 <body id="page-top">
-    <nav class="navbar navbar-light navbar-expand-md navbar navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#">Apparel and ACCESSORIES thrift</a><button data-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link active js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="#shop">SHOP</a></li>
-                    <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="#contact">contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <header class="masthead" style="background-image:url('assets/img/intro-bg.jpg');">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading">Thrifting</h1>
-                        <p class="intro-text">Be unique, stay true to yourself, and thrift. Who doesn't like a new outfit to wear? You can find great pieces that everyone will want to know about.&nbsp;&nbsp;</p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
+                        <h1 class="brand-heading">Shop</h1>
+                        <p class="intro-text">See what is available below.&nbsp;&nbsp;</p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a>
                     </div>
                 </div>
             </div>
@@ -39,21 +28,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2>About our Thrift Shop</h2>
-                    <p>Apparel and Accessories Thrift is an online thrift store started by two sisters. Check out what we have available right now, simply visiting&nbsp;<a href="#">the shop page</a>. Who knows you might find something to rock your style.</p>
-                    <p>The items you can find range from different high end brands to vintage clothing.&nbsp;</p>
+                    <h2>Sold OUt</h2>
+                    <p>New drop coming in 2022 :)</p>
                 </div>
             </div>
         </div>
     </section>
-    <section id="download" class="download-section content-section text-center" style="background-image:url('assets/img/downloads-bg.jpg');"><img src="assets/img/jeans%20background.jpeg">
-        <div class="container">
-            <div class="col-lg-8 mx-auto">
-                <h1>ShOP NOW</h1>
-                <p>You can shop as long as you want, but items will be gone after they sell.&nbsp;</p><button class="btn btn-primary btn-lg btn-default" type="button">visit SHOP page</button>
-            </div>
-        </div>
-    </section>
+    <section id="download" class="download-section content-section text-center" style="background-image:url('assets/img/downloads-bg.jpg');"></section>
     <section id="contact" class="content-section text-center">
         <div class="container">
             <div class="row">
